--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name"><node>&#x1F6B0;&#x1F4A7;</node>Wells<node>&#x1F4A7;&#x1F6B0;</node></string>
+    <string name="app_name_short"><node>&#x1F4A7;</node>Wells<node>&#x1F4A7;</node></string>
     <!-- Fingerprint -->
     <string name="instructions"> </string>
 
