--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,7 +77,8 @@
     <string name="statistik">Statistik</string>
     <string name="rundes_icon">Rundes Icon</string>
     <string name="NotificationN">Notification</string>
-    <string name="Error">Error</string>
+    <string name="error">Error</string>
+    <string name="finger_nicht_erkannt">Finger nicht erkannt!</string>
 
 
 
