--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,8 +56,6 @@
     <string name="neues_passwort">Neues Passwort</string>
     <string name="passwort_best_tigen">Passwort bestätigen</string>
     <string name="speichern">Speichern</string>
-    <string name="wenig">wenig</string>
-    <string name="viel">viel</string>
     <string name="gr_e">Größe</string>
     <string name="gewicht">Gewicht</string>
     <string name="alter">Alter</string>
@@ -85,6 +83,9 @@
     <string name="loeschen">loeschen</string>
     <string name="prozent">0%</string>
     <string name="fortschritt">Fortschritt</string>
+    <string name="aktivit_t">VIel Aktivität?</string>
+    <string name="nein">Nein</string>
+    <string name="ja">Ja</string>
 
 
 </resources>
