nav drawer add map changed icons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="liste">Liste</string>
     <string name="fingerprint_bild">Fingerprint Bild</string>
     <string name="liste_trinkbrunnen">Liste Trinkbrunnen</string>
+    <string name="anzeige_karte">Karte</string>
     <string name="verlauf">Verlauf</string>
     <string name="statistik">Statistik</string>
     <string name="rundes_icon">Rundes Icon</string>
