--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="nein">Nein</string>
     <string name="ja">Ja</string>
     <string name="logout">LogOut</string>
+    <string name="unbekannt">Unbekannt</string>
 
 
 </resources>
