--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,8 @@
     <string name="ja">Ja</string>
     <string name="logout">LogOut</string>
     <string name="unbekannt">Unbekannt</string>
+    <string name="_330ml">330ML</string>
+    <string name="_500ml">500ML</string>
 
 
 </resources>
