--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,7 +72,7 @@
     <string name="error">Error</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="loeschen">loeschen</string>
+    <string name="loeschen">löschen</string>
     <string name="prozent">0%</string>
     <string name="aktivit_t">Viel Aktivität?</string>
     <string name="nein">Nein</string>
@@ -83,6 +83,7 @@
     <string name="_500ml">500ML</string>
     <string name="datum">Datum</string>
     <string name="uhrzeit">Uhrzeit</string>
-
+    <string name="fingerachtung">Achtung! Bei Anmeldung via Fingerprint ist weder eine genaue Berechnung möglich, noch die Funktionen Statistik und Verlauf!</string>
+    <string name="profil_l_schen">Profil löschen</string>
 
 </resources>
